li is clickable

--- a/Code/blog.html
+++ b/Code/blog.html
@@ -37,10 +37,10 @@
       <i class="fas fa-times"></i>
     </label>
     <ul class="list">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="skills.html">Skills</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li onclick="location.href='index.html';"><a>Home</a></li>
+      <li onclick="location.href='skills.html';"><a>Skills</a></li>
+      <li onclick="location.href='blog.html';"><a>Blog</a></li>
+      <li onclick="location.href='contact.html';"><a>Contact</a></li>
     </ul>
   </div>
   <div class="landing_page">
@@ -161,12 +161,6 @@
 
     <div class="footer container">
         <p>&#169; Jamie Vos</p>
-        <div class="social">
-            <a href="#"><i class='bx bxl-facebook'></i></a>
-            <a href="#"><i class='bx bxl-twitter'></i></a>
-            <a href="#"><i class='bx bxl-instagram'></i></a>
-            <a href="#"><i class='bx bxl-linkedin'></i></a>
-        </div>
     </div>
 
     <script src="https://unpkg.com/boxicons@2.1.2/dist/boxicons.js"></script>
