--- a/Code/index.html
+++ b/Code/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=0.85"/>
+  <meta name="viewport" content="width=device-width, initial-scale=0.85" />
 
   <!-- Title -->
   <title>Jamie Vos</title>
-  
+
   <!-- CSS -->
   <link rel="stylesheet" href="Css/style.css">
 
@@ -19,7 +19,7 @@
   <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
 </head>
@@ -32,10 +32,10 @@
       <i class="fas fa-times"></i>
     </label>
     <ul class="list">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="skills.html">Skills</a></li>
-      <li><a href="blog.html">Blog</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li onclick="location.href='index.html';"><a>Home</a></li>
+      <li onclick="location.href='skills.html';"><a>Skills</a></li>
+      <li onclick="location.href='blog.html';"><a>Blog</a></li>
+      <li onclick="location.href='contact.html';"><a>Contact</a></li>
     </ul>
   </div>
   <div class="landing_page">
@@ -59,9 +59,9 @@
     </div>
   </header>
 
-  <section class="hero-section" >
+  <section class="hero-section">
     <div class="card-grid">
-      <a  class="card" href="post-page.html">
+      <a class="card" href="#">
         <div class="card__background" style="background-image: url('../Foto\'s/Drill.jpg');"></div>
         <div class="card__content">
         </div>
@@ -71,37 +71,37 @@
         <div class="card__content">
         </div>
       </a>
-      <a  class="card" href="#">
+      <a class="card" href="#">
         <div class="card__background" style="background-image: url('../Foto\'s/b.jpg');"></div>
         <div class="card__content">
         </div>
-      </li>
-      <a class="card" href="#">
-        <div class="card__background" style="background-image: url('../Foto\'s/12.jpg');"></div>
-        <div class="card__content">
-        </div>
-      </a>
-      <a class="card" href="#">
-        <div class="card__background" style="background-image: url('../Foto\'s/Untitled-1.jpg');"></div>
-        <div class="card__content">
-        </div>
-      </a>
-      <a class="card" href="#">
-        <div class="card__background" style="background-image: url('../Foto\'s/Untitled-2.jpg');"></div>
-        <div class="card__content">
-        </div>
-      </a>
-      <a class="card" href="#">
-        <div class="card__background" style="background-image: url('../Foto\'s/Untitled-3.jpg');"></div>
-        <div class="card__content">
-        </div>
-      </a>
-      <a class="card" href="#">
-        <div class="card__background" style="background-image: url('../Foto\'s/Untitled-4.jpg');"></div>
-        <div class="card__content">
-        </div>
-      </a>
-    <div>
+        </li>
+        <a class="card" href="#">
+          <div class="card__background" style="background-image: url('../Foto\'s/12.jpg');"></div>
+          <div class="card__content">
+          </div>
+        </a>
+        <a class="card" href="#">
+          <div class="card__background" style="background-image: url('../Foto\'s/Untitled-1.jpg');"></div>
+          <div class="card__content">
+          </div>
+        </a>
+        <a class="card" href="#">
+          <div class="card__background" style="background-image: url('../Foto\'s/Untitled-2.jpg');"></div>
+          <div class="card__content">
+          </div>
+        </a>
+        <a class="card" href="#">
+          <div class="card__background" style="background-image: url('../Foto\'s/Untitled-3.jpg');"></div>
+          <div class="card__content">
+          </div>
+        </a>
+        <a class="card" href="#">
+          <div class="card__background" style="background-image: url('../Foto\'s/Untitled-4.jpg');"></div>
+          <div class="card__content">
+          </div>
+        </a>
+        <div>
   </section>
 
   <section class="section section-a" id="About">
@@ -125,7 +125,7 @@
             I love learning. If you use programming languages or tools that I have not already mastered, I probably
             already heard about it and I definitely am confident that I can quickly become proficient with it.
             <br><br>
-      
+
           </p>
         </div>
       </div>
@@ -134,15 +134,9 @@
 
   <a class="gotopbtn" href="#"><i class="fas fa-arrow-up"></i></a>
 
-  <!-- <div class="footer container">
+  <div class="footer container">
     <p>&#169; Jamie Vos</p>
-    <div class="social">
-        <a href="#"><i class='bx bxl-facebook'></i></a>
-        <a href="#"><i class='bx bxl-twitter'></i></a>
-        <a href="#"><i class='bx bxl-instagram'></i></a>
-        <a href="#"><i class='bx bxl-linkedin'></i></a>
-    </div>
-</div> -->
+</div>
 
   <!-- Javascript + Animate library-->
 
@@ -156,6 +150,7 @@
       once: true,
     });
   </script>
+</div>
 
 </body>
 
