--- a/Code/skills.html
+++ b/Code/skills.html
@@ -1,36 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skills</title>
-    <link rel="shortcut icon" href="Foto's/70955320.png" type="image/x-icon" />
-    <link rel="stylesheet" href="Css/skills.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
 
+    <!-- Title -->
+    <title>Skills</title>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="Css/skills.css">
+
+    <!-- Shortcut icon -->
+    <link rel="shortcut icon" href="Foto's/70955320.png" type="image/x-icon" />
+
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
 </head>
+
 <body>
 
     <input type="checkbox" name="" id="menuBtn">
-  <div class="menu_overlay">
-    <label for="menuBtn">
-      <i class="fas fa-times"></i>
-    </label>
-    <ul class="list">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="skills.html">Skills</a></li>
-      <li><a href="blog.html">Blog</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </div>
-  <div class="landing_page">
-    <div class="menu">
-      <label for="menuBtn">
-        <i class="fas fa-bars"></i>
-      </label>
+    <div class="menu_overlay">
+        <label for="menuBtn">
+            <i class="fas fa-times"></i>
+        </label>
+        <ul class="list">
+            <li onclick="location.href='index.html';"><a>Home</a></li>
+      <li onclick="location.href='skills.html';"><a>Skills</a></li>
+      <li onclick="location.href='blog.html';"><a>Blog</a></li>
+      <li onclick="location.href='contact.html';"><a>Contact</a></li>
+        </ul>
     </div>
-  </div>
+    <div class="landing_page">
+        <div class="menu">
+            <label for="menuBtn">
+                <i class="fas fa-bars"></i>
+            </label>
+        </div>
+    </div>
 
     <div class="skills">
         <div class="container">
@@ -76,7 +85,7 @@
                     <i class="fas fa-pencil-ruler"></i>
                     <h4>Coding</h4>
                     <p>
-                        Algorithms <br> Databases <br> Abstract Thinking <br> Good memory 
+                        Algorithms <br> Databases <br> Abstract Thinking <br> Good memory
                     </p>
                 </div>
 
@@ -92,6 +101,11 @@
         </div>
     </div>
 
+    
+    <!-- Scripts -->
+
     <script src="Js/app.js"></script>
+
 </body>
+
 </html>
