Blog code cleanup

--- a/Code/contact.html
+++ b/Code/contact.html
@@ -19,8 +19,11 @@
     <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
+        integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
+        integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -32,9 +35,9 @@
         </label>
         <ul class="list">
             <li onclick="location.href='index.html';"><a>Home</a></li>
-      <li onclick="location.href='skills.html';"><a>Skills</a></li>
-      <li onclick="location.href='blog.html';"><a>Blog</a></li>
-      <li onclick="location.href='contact.html';"><a>Contact</a></li>
+            <li onclick="location.href='skills.html';"><a>Skills</a></li>
+            <li onclick="location.href='blog.html';"><a>Blog</a></li>
+            <li onclick="location.href='contact.html';"><a>Contact</a></li>
         </ul>
     </div>
     <div class="landing_page">
@@ -76,10 +79,10 @@
 
     <script>
         AOS.init({
-          duration: 3000,
-          once: true,
+            duration: 3000,
+            once: true,
         });
-      </script>
+    </script>
 
 </body>
 
