Projecten zijn klikbaar

--- a/Code/skills.html
+++ b/Code/skills.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="Css/skills.css">
 
     <!-- Shortcut icon -->
-    <link rel="shortcut icon" href="Foto's/70955320.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="../Foto's/Logo.png">
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
@@ -66,7 +66,7 @@
                 </div>
 
                 <div class="card">
-                    <i class="fas fa-pencil-ruler"></i>
+                    <i class="fas fa-solid fa-crop"></i>
                     <h4>Frameworks</h4>
                     <p>
                         Laravel <br> Angular <br> jQuery <br> NET Core
@@ -74,7 +74,7 @@
                 </div>
 
                 <div class="card">
-                    <i class="fas fa-pencil-ruler"></i>
+                    <i class="fas fa-solid fa-paint-roller"></i>
                     <h4>Design</h4>
                     <p>
                         Photoshop <br> XD <br> Maya <br> Blender
@@ -82,7 +82,7 @@
                 </div>
 
                 <div class="card">
-                    <i class="fas fa-pencil-ruler"></i>
+                    <i class="fas fa-solid fa-code-branch"></i>
                     <h4>Coding</h4>
                     <p>
                         Algorithms <br> Databases <br> Abstract Thinking <br> Good memory
@@ -90,7 +90,7 @@
                 </div>
 
                 <div class="card">
-                    <i class="fas fa-pencil-ruler"></i>
+                    <i class="fas fa-solid fa-user-check"></i>
                     <h4>Professional Skills</h4>
                     <p>
                         Communication <br> Collaboration/teamwork <br> Time management <br> Creativity
