--- a/Code/Blogs/post-page-AM.html
+++ b/Code/Blogs/post-page-AM.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../Css/blog.css">
 
     <!-- Shortcut icon -->
-    <link rel="shortcut icon" href="../../Foto's/Logo.png">
+    <link rel="shortcut icon" href="../Foto's/Logo.png">
 
     <!-- Stylesheets -->
     <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet">
