--- a/Code/Blogs/post-page-ID.html
+++ b/Code/Blogs/post-page-ID.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Title -->
-    <title>Post Page</title>
+    <title>Interaction Design</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="../Css/blog.css">
 
     <!-- Shortcut icon -->
-    <link rel="shortcut icon" href="../Foto's/Logo.png">
+    <link rel="shortcut icon" href="../../Foto's/Logo.png">
 
     <!-- Stylesheets -->
     <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet">
