--- a/Code/Blogs/post-page.html
+++ b/Code/Blogs/post-page.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Title -->
-    <title>Post Page</title>
+    <title>Politie zuidoost</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="../Css/blog.css">
