--- a/Code/index.html
+++ b/Code/index.html
@@ -52,7 +52,13 @@
 
   <header class="header container">
     <div class="fullscreen-video-wrap">
-      <video src="../Foto's/video.mp4" type="video/mp4" autoplay="autoplay" muted="true" loop="true"></video>
+      <video 
+        	src="../Foto's/video.mp4" 
+          type="video/mp4" 
+          class="video-player"
+          controls preload="auto"
+          autoplay="autoplay" loop muted playsinline
+        ></video>
     </div>
     <div class="header-overlay"></div>
     <div class="header-content">
@@ -212,7 +218,7 @@
 
 
           <a href="https://trello.com/b/BG9m1RyC/arcade-mechanics-f2m3" class="fa fa-trello"></a> 
-          <a href="#" class="fa fa-code"></a> 
+          <a href="https://mega.nz/folder/GkpmRYwZ#7p6nyk_heMViCU4STmzm9Q" class="fa fa-code"></a> 
           <a href="https://github.com/JamieVos991/Arcade-Mechanics-F1M3" class="fa fa-github"></a> 
         <div onclick="off5()" class="close-btn">&times;</div>
       </div>
