Contact page change

--- a/Code/index.html
+++ b/Code/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
 
 <head>
-<<<<<<< HEAD
 
-=======
->>>>>>> 1da138ea7872ed21ae9d1ba3d505315da394684c
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=0.85" />
@@ -13,7 +10,6 @@
   <!-- Title -->
   <title>Jamie Vos</title>
 
-<<<<<<< HEAD
   <!-- Shortcut icon -->
   <link rel="shortcut icon" href="../Foto's/Logo.png">
 
@@ -21,25 +17,12 @@
   <link rel="stylesheet" href="Css/style.css">
 
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-=======
-  <!-- CSS -->
-  <link rel="stylesheet" href="Css/style.css">
-
-  <!-- Shortcut icon -->
-  <link rel="shortcut icon" href="../Foto's/Logo.png">
-
-  <!-- Stylesheets -->
-  <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
     integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
     integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
->>>>>>> 1da138ea7872ed21ae9d1ba3d505315da394684c
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
 </head>
@@ -67,7 +50,6 @@
   </div>
 
 
-<<<<<<< HEAD
   <!-- Timer -->
   <div class="launch-time">
     <div>
@@ -86,7 +68,8 @@
 
   <header class="header container">
     <div class="fullscreen-video-wrap">
-      <video src="../Foto's/pexels-mikhail-nilov-7534239.mp4" type="video/mp4" class="video-player" autoplay="autoplay" loop muted playsinline></video>
+      <video src="../Foto's/pexels-mikhail-nilov-7534239.mp4" type="video/mp4" class="video-player" autoplay="autoplay"
+        loop muted playsinline></video>
     </div>
     <div class="header-overlay"></div>
     <div class="header-content">
@@ -94,7 +77,11 @@
     </div>
   </header>
 
+ 
+
+
   <section class="card-section">
+      
     <div class="card-grid">
       <a class="card" onclick="on()">
         <div class="card__background" style="background-image: url('../Foto\'s/Drill.jpg');">
@@ -117,40 +104,10 @@
             <i class="fa-brands fa-js" style="font-size: 25px;"></i>
           </div>
         </div>
-=======
-  <header class="header container">
-    <div class="fullscreen-video-wrap">
-      <video 
-        	src="../Foto's/video.mp4" 
-          type="video/mp4" 
-          class="video-player"
-          controls preload="auto"
-          autoplay="autoplay" loop muted playsinline
-        ></video>
-    </div>
-    <div class="header-overlay"></div>
-    <div class="header-content">
-      <h1>Hello stranger... <br>It's okay, you can<br> scroll down. <span>🎃</span></h1>
-      <!-- <p> <span class="p-curl">{</span> <span class="italic">I'm Jamie, a 2004 child and like many born of the generation, my relationship with coding started the
-        day I was born.<br> In this portfolio, I document my journey into coding. </span> <span class="p-curl"> } </span> </p> -->
-    </div>
-  </header>
-
-  <section class="hero-section">
-    <div class="card-grid">
-      <a class="card" onclick="on()">
-        <div class="card__background" style="background-image: url('../Foto\'s/Drill.jpg');"></div>
-        <div class="card__content">
-        </div>
-      </a>
-      <a class="card" onclick="on2()">
-        <div class="card__background" style="background-image: url('../Foto\'s/577x1047_Country.jpg');"></div>
->>>>>>> 1da138ea7872ed21ae9d1ba3d505315da394684c
         <div class="card__content">
         </div>
       </a>
       <a class="card" onclick="on3()">
-<<<<<<< HEAD
         <div class="card__background" style="background-image: url('../Foto\'s/b.jpg');">
           <div class="card-info">
             <i class="fa-brands fa-php" style="padding-right: 45px; font-size: 25px;"></i>
@@ -158,30 +115,21 @@
             <i class="fa-brands fa-laravel" style="font-size: 25px;"></i>
           </div>
         </div>
-=======
-        <div class="card__background" style="background-image: url('../Foto\'s/b.jpg');"></div>
->>>>>>> 1da138ea7872ed21ae9d1ba3d505315da394684c
         <div class="card__content">
         </div>
         </li>
         <a class="card" onclick="on4()">
-<<<<<<< HEAD
-          <div class="card__background"
-            style="background-image: url('../Foto\'s/Schermafbeelding 2022-09-08 183141.jpg">
+          <div class="card__background" style="background-image: url('../Foto\'s/b.jpg');">
             <div class="card-info">
               <i class="fa-brands fa-html5" style="padding-right: 45px; font-size: 25px;"></i>
               <i class="fa-brands fa-css3" style="padding-right: 45px; font-size: 25px;"></i>
               <i class="fa-brands fa-js" style="font-size: 25px;"></i>
             </div>
           </div>
-=======
-          <div class="card__background" style="background-image: url('../Foto\'s/TClogo.jpg');"></div>
->>>>>>> 1da138ea7872ed21ae9d1ba3d505315da394684c
           <div class="card__content">
           </div>
         </a>
         <a class="card" onclick="on5()">
-<<<<<<< HEAD
           <div class="card__background" style="background-image: url('../Foto\'s/spaceship.png');">
             <div class="card-info">
               <i class="fa-brands fa-unity" style="padding-right: 45px; font-size: 25px;"></i>
@@ -189,42 +137,30 @@
               <i class="fa-brands fa-git-alt" style="font-size: 25px;"></i>
             </div>
           </div>
-=======
-          <div class="card__background" style="background-image: url('../Foto\'s/spaceship.png');"></div>
->>>>>>> 1da138ea7872ed21ae9d1ba3d505315da394684c
           <div class="card__content">
           </div>
         </a>
         <a class="card" onclick="on6()">
-<<<<<<< HEAD
           <div class="card__background" style="background-image: url('../Foto\'s/Untitled-2.jpg');">
             <div class="card-info">
               <i class="fa-brands fa-react" style="padding-right: 45px; font-size: 25px;"></i>
-              <i class="fa-brands fa-npm" style="padding-right: 45px; font-size: 25px;"></i>
+              <i class="fa-brands fa-css3" style="padding-right: 45px; font-size: 25px;"></i>
               <i class="fa-brands fa-js" style="font-size: 25px;"></i>
             </div>
           </div>
-=======
-          <div class="card__background" style="background-image: url('../Foto\'s/Untitled-2.jpg');"></div>
->>>>>>> 1da138ea7872ed21ae9d1ba3d505315da394684c
           <div class="card__content">
           </div>
         </a>
         <a class="card" onclick="on7()">
-<<<<<<< HEAD
           <div class="card__background" style="background-image: url('../Foto\'s/95.png');">
             <div class="card-info">
               <i class="fa-brands fa-python" style="font-size: 25px;"></i>
             </div>
           </div>
-=======
-          <div class="card__background" style="background-image: url('../Foto\'s/95.png');"></div>
->>>>>>> 1da138ea7872ed21ae9d1ba3d505315da394684c
           <div class="card__content">
           </div>
         </a>
         <a class="card" onclick="on8()">
-<<<<<<< HEAD
           <div class="card__background" style="background-image: url('../Foto\'s/Design Kamer 1.png');">
             <div class="card-info">
               <i class="fa-brands fa-html5" style="padding-right: 45px; font-size: 25px;"></i>
@@ -232,9 +168,6 @@
               <i class="fa-brands fa-sass" style="font-size: 25px;"></i>
             </div>
           </div>
-=======
-          <div class="card__background" style="background-image: url('../Foto\'s/Design Kamer 1.png');"></div>
->>>>>>> 1da138ea7872ed21ae9d1ba3d505315da394684c
           <div class="card__content">
           </div>
         </a>
@@ -271,10 +204,6 @@
 
   <a class="gotopbtn" href="#"><i class="fas fa-arrow-up"></i></a>
 
-  <div class="footer container">
-    <p>&#169; Jamie Vos</p>
-  </div>
-
   <section id="overlay">
     <div class="about-card">
       <div class="text-box">
@@ -299,15 +228,9 @@
         <p style="padding-top: 40px; color: white;"></p>
 
 
-<<<<<<< HEAD
         <a href="https://trello.com/b/2OaRTgRi/the-longnex" class="fa fa-trello"></a>
         <a href="#" class="fa fa-code"></a>
         <a href="https://github.com/AlexMarquez-coder/Longneck" class="fa fa-github"></a>
-=======
-          <a href="https://trello.com/b/2OaRTgRi/the-longnex" class="fa fa-trello"></a>
-          <a href="#" class="fa fa-code"></a>
-          <a href="https://github.com/AlexMarquez-coder/Longneck" class="fa fa-github"></a>
->>>>>>> 1da138ea7872ed21ae9d1ba3d505315da394684c
         <div onclick="off2()" class="close-btn">&times;</div>
       </div>
     </div>
@@ -320,15 +243,9 @@
         <p style="padding-top: 40px; color: white;"></p>
 
 
-<<<<<<< HEAD
         <a href="https://trello.com/b/Fqg9Rh19/welcome-to-mars" class="fa fa-trello"></a>
         <a href="#" class="fa fa-code"></a>
         <a href="https://github.com/AlexMarquez-coder/Mars" class="fa fa-github"></a>
-=======
-        <a href="https://trello.com/b/Fqg9Rh19/welcome-to-mars" class="fa fa-trello"></a> 
-        <a href="#" class="fa fa-code"></a> 
-        <a href="https://github.com/AlexMarquez-coder/Mars" class="fa fa-github"></a> 
->>>>>>> 1da138ea7872ed21ae9d1ba3d505315da394684c
         <div onclick="off3()" class="close-btn">&times;</div>
       </div>
     </div>
@@ -342,15 +259,9 @@
         <p style="padding-top: 40px; color: white;"></p>
 
 
-<<<<<<< HEAD
         <a href="https://trello.com/b/ldGDan0n/security-iot" class="fa fa-trello"></a>
         <a href="#" class="fa fa-code"></a>
         <a href="https://github.com/JamieVos991/PROG-Team-F2M5" class="fa fa-github"></a>
-=======
-          <a href="https://trello.com/b/ldGDan0n/security-iot" class="fa fa-trello"></a> 
-          <a href="#" class="fa fa-code"></a> 
-          <a href="https://github.com/JamieVos991/PROG-Team-F2M5" class="fa fa-github"></a> 
->>>>>>> 1da138ea7872ed21ae9d1ba3d505315da394684c
         <div onclick="off4()" class="close-btn">&times;</div>
       </div>
     </div>
@@ -363,15 +274,9 @@
         <p style="padding-top: 40px; color: white;"></p>
 
 
-<<<<<<< HEAD
         <a href="https://trello.com/b/BG9m1RyC/arcade-mechanics-f2m3" class="fa fa-trello"></a>
         <a href="https://mega.nz/folder/GkpmRYwZ#7p6nyk_heMViCU4STmzm9Q" class="fa fa-code"></a>
         <a href="https://github.com/JamieVos991/Arcade-Mechanics-F1M3" class="fa fa-github"></a>
-=======
-          <a href="https://trello.com/b/BG9m1RyC/arcade-mechanics-f2m3" class="fa fa-trello"></a> 
-          <a href="https://mega.nz/folder/GkpmRYwZ#7p6nyk_heMViCU4STmzm9Q" class="fa fa-code"></a> 
-          <a href="https://github.com/JamieVos991/Arcade-Mechanics-F1M3" class="fa fa-github"></a> 
->>>>>>> 1da138ea7872ed21ae9d1ba3d505315da394684c
         <div onclick="off5()" class="close-btn">&times;</div>
       </div>
     </div>
@@ -384,15 +289,9 @@
         <p style="padding-top: 40px; color: white;"></p>
 
 
-<<<<<<< HEAD
         <a href="https://trello.com/b/cURQGeLi/input-output" class="fa fa-trello"></a>
         <a href="#" class="fa fa-code"></a>
         <a href="https://github.com/JamieVos991/Input-Output" class="fa fa-github"></a>
-=======
-          <a href="https://trello.com/b/cURQGeLi/input-output" class="fa fa-trello"></a> 
-          <a href="#" class="fa fa-code"></a> 
-          <a href="https://github.com/JamieVos991/Input-Output" class="fa fa-github"></a> 
->>>>>>> 1da138ea7872ed21ae9d1ba3d505315da394684c
         <div onclick="off6()" class="close-btn">&times;</div>
       </div>
     </div>
@@ -404,15 +303,9 @@
         <h1 id="font-size" class="owText text-center" style=" padding-top: 40px; color: white;">CSS Art</h1>
         <p style="padding-top: 40px; color: white;"></p>
 
-<<<<<<< HEAD
         <a href="#" class="fa fa-trello"></a>
         <a href="#" class="fa fa-code"></a>
         <a href="https://github.com/JamieVos991/CSS-Art-F2M8" class="fa fa-github"></a>
-=======
-          <a href="#" class="fa fa-trello"></a> 
-          <a href="#" class="fa fa-code"></a> 
-          <a href="https://github.com/JamieVos991/CSS-Art-F2M8" class="fa fa-github"></a> 
->>>>>>> 1da138ea7872ed21ae9d1ba3d505315da394684c
 
         <div onclick="off7()" class="close-btn">&times;</div>
       </div>
@@ -426,25 +319,20 @@
         </h1>
         <p style="padding-top: 40px; color: white;"></p>
 
-<<<<<<< HEAD
         <a href="https://trello.com/b/qR8TTk2Y/radicale-kunstspeeltuin" class="fa fa-trello"></a>
         <a href="#" class="fa fa-code"></a>
         <a href="https://github.com/JamieVos991/F2M2-Radicale-Kunstspeeltuin" class="fa fa-github"></a>
-=======
-          <a href="https://trello.com/b/qR8TTk2Y/radicale-kunstspeeltuin" class="fa fa-trello"></a> 
-          <a href="#" class="fa fa-code"></a> 
-          <a href="https://github.com/JamieVos991/F2M2-Radicale-Kunstspeeltuin" class="fa fa-github"></a> 
->>>>>>> 1da138ea7872ed21ae9d1ba3d505315da394684c
 
         <div onclick="off8()" class="close-btn">&times;</div>
       </div>
     </div>
   </section>
 
-<<<<<<< HEAD
+  <section class="footer container">
+    <p>&#169; Jamie Vos</p>
+  </section>
 
-=======
->>>>>>> 1da138ea7872ed21ae9d1ba3d505315da394684c
+
   <!-- Javascript + Animate library-->
 
   <script>
@@ -553,7 +441,6 @@
 
   </script>
 
-<<<<<<< HEAD
   <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
   <script src="https://kit.fontawesome.com/efa2741675.js" crossorigin="anonymous"></script>
   <script src="Js/app.js"></script>
@@ -561,25 +448,13 @@
 
   <script>
 
-=======
-  <script src="Js/app.js"></script>
-  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-
-  </div>
-
-  <script>
->>>>>>> 1da138ea7872ed21ae9d1ba3d505315da394684c
     AOS.init({
       duration: 3000,
       once: true,
     });
-<<<<<<< HEAD
 
   </script>
 
-=======
-  </script>
->>>>>>> 1da138ea7872ed21ae9d1ba3d505315da394684c
 </body>
 
 </html>
