--- a/Code/contact.html
+++ b/Code/contact.html
@@ -15,35 +15,16 @@
     <!-- Shortcut icon -->
     <link rel="shortcut icon" href="../Foto's/Logo.png">
 
-<<<<<<< HEAD
-   
- <!-- Stylesheets -->
-=======
     <!-- Stylesheets -->
->>>>>>> 1da138ea7872ed21ae9d1ba3d505315da394684c
     <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<<<<<<< HEAD
-=======
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
+        integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
+        integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
->>>>>>> 1da138ea7872ed21ae9d1ba3d505315da394684c
-    <style>
-        .fa {
-            width: 200px;
-            height: 185px;
-            font-size: 40px;
-            text-align: center;
-            line-height: 140px;
-            text-decoration: none;
-            border-radius: 3px;
-            margin: 25px 2px;
-            padding: 20px;
-
-        }
-    </style>
 </head>
 
 <body>
@@ -67,56 +48,56 @@
             </label>
         </div>
     </div>
-<<<<<<< HEAD
-    <div class="container">
-        <div class="container-social">
-            <a href="https://www.facebook.com/" target="_blank" class="fa fa-facebook"></a>
-            <a href="https://twitter.com/" target="_blank" class="fa fa-twitter"></a>
-            <a href="https://www.google.com" target="_blank" class="fa fa-google"></a>
-            <a href="https://www.linkedin.com/in/jamie-vos-0a0b4a18a/" target="_blank" class="fa fa-linkedin"></a>
-            <a href="https://www.youtube.com/channel/UCGcCCIBv7Gchg-hgh_8_l7A" target="_blank" class="fa fa-youtube"></a>
-            <a href="https://www.instagram.com/" target="_blank" class="fa fa-instagram"></a>
-            <a href="https://nl.pinterest.com/jamiev2427" target="_blank" class="fa fa-pinterest"></a>
-            <a href="https://trello.com/u/jamie08619641" target="_blank" class="fa fa-trello"></a>
-            <a href="https://github.com/JamieVos991" target="_blank" class="fa fa-github"></a>
-            <a href="https://www.twitch.tv/" target="_blank" class="fa fa-twitch"></a>
-            <a href="https://www.quora.com/profile/Jamie-Vos-8" target="_blank" class="fa fa-quora"></a>
-            <a href="https://www.tumblr.com" target="_blank" class="fa fa-tumblr"></a>
-            <a href="https://www.vimeo.com" target="_blank" class="fa fa-vimeo"></a>
-            <a href="https://www.reddit.com" target="_blank" class="fa fa-reddit"></a>
-            <a href="https://www.deviantart.com" target="_blank" class="fa fa-deviantart"></a>
-        </div>
-    </div>
-=======
 
-    <div class="container-social">
-        <a href="https://www.facebook.com/" target="_blank" class="fa fa-facebook"></a>
-        <a href="https://twitter.com/" target="_blank" class="fa fa-twitter"></a>
-        <a href="https://www.google.com" target="_blank" class="fa fa-google"></a>
-        <a href="https://www.linkedin.com/in/jamie-vos-0a0b4a18a/" target="_blank" class="fa fa-linkedin"></a>
-        <a href="https://www.youtube.com/channel/UCGcCCIBv7Gchg-hgh_8_l7A" target="_blank" class="fa fa-youtube"></a>
-        <a href="https://www.instagram.com/" target="_blank" class="fa fa-instagram"></a>
-        <a href="https://nl.pinterest.com/jamiev2427" target="_blank" class="fa fa-pinterest"></a>
-        <a href="https://trello.com/u/jamie08619641" target="_blank" class="fa fa-trello"></a>
-        <a href="https://github.com/JamieVos991" target="_blank" class="fa fa-github"></a>
-        <a href="https://www.twitch.tv/" target="_blank" class="fa fa-twitch"></a>
-        <a href="https://www.quora.com/profile/Jamie-Vos-8" target="_blank" class="fa fa-quora"></a>
-        <a href="https://www.tumblr.com" target="_blank" class="fa fa-tumblr"></a>
-        <a href="https://www.vimeo.com" target="_blank" class="fa fa-vimeo"></a>
-        <a href="https://www.reddit.com" target="_blank" class="fa fa-reddit"></a>
-        <a href="https://www.deviantart.com" target="_blank" class="fa fa-deviantart"></a>
-    </div>
+    <section class="ss-icon">
+        <a class="ss__a" target="_blank" rel="relation_name" href="https://github.com/JamieVos991">
+            <article><span><i class="fa-brands fa-github"></i></span></article>
+        </a>
+        <a class="ss__a" target="_blank" rel="relation_name" href="https://www.youtube.com/channel/UCGcCCIBv7Gchg-hgh_8_l7A">
+            <article><span>Youtube</span></article>
+        </a>
+        <a class="ss__a" target="_blank" rel="relation_name" href="https://nl.linkedin.com/in/jamie-vos-0a0b4a18a?trk=people-guest_people_search-card">
+            <article><span>Twitter</span></article>
+        </a>
+        <a class="ss__a" href="#">
+            <article><span>pinterest</span></article>
+        </a>
+        <a class="ss__a" href="#">
+            <article><span>Instagram</span></article>
+        </a>
+        <a class="ss__a" href="#">
+            <article><span>mail</span></article>
+        </a>
+        <a class="ss__a" target="_blank" rel="relation_name" href="https://nl.linkedin.com/in/jamie-vos-0a0b4a18a?trk=people-guest_people_search-card">
+            <article><span>linkedin</span></article>
+        </a>
+        <a class="ss__a" href="#">
+            <article><span><i class="fa-brands fa-whatsapp"></i></i></span></article>
+        </a>
+        <a class="ss__a" href="#">
+            <article><span><i class="fa-brands fa-quora"></i></span></article>
+        </a>
+        <a class="ss__a" href="#">
+            <article><span><i class="fa-brands fa-reddit"></i></span></article>
+        </a>
+        <a class="ss__a" href="#">
+            <article><span>blogger</span></article>
+        </a>
+        <a class="ss__a" href="#">
+            <article><span>vimeo</span></article>
+        </a>
 
->>>>>>> 1da138ea7872ed21ae9d1ba3d505315da394684c
-    <div class="footer container">
+    </section>
+    <section class="footer container">
         <p>&#169; Jamie Vos</p>
-    </div>
-
+    </section>
 
     <!-- Scripts -->
 
     <script src="Js/app.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
+    <script src="https://kit.fontawesome.com/efa2741675.js" crossorigin="anonymous"></script>
 
     <script>
         AOS.init({
