--- a/Code/index.html
+++ b/Code/index.html
@@ -84,7 +84,7 @@
       
     <div class="card-grid">
       <a class="card" onclick="on()">
-        <div class="card__background" style="background-image: url('../Foto\'s/Drill.jpg');">
+        <div class="card__background" style="background-image: url('../Foto\'s/Drill.jpg'); background-size:cover;">
 
           <div class="card-info">
             <i class="fa-brands fa-html5" style="padding-right: 45px; font-size: 25px;"></i>
@@ -97,7 +97,7 @@
         </div>
       </a>
       <a class="card" onclick="on2()">
-        <div class="card__background" style="background-image: url('../Foto\'s/Untitled-2.jpg');">
+        <div class="card__background" style="background-image: url('../Foto\'s/Untitled-2.jpg'); background-size: cover;">
           <div class="card-info">
             <i class="fa-brands fa-css3" style="padding-right: 45px; font-size: 25px;"></i>
             <i class="fa-solid fa-c" style="padding-right: 45px; font-size: 25px;"></i>
@@ -108,18 +108,18 @@
         </div>
       </a>
       <a class="card" onclick="on3()">
-        <div class="card__background" style="background-image: url('../Foto\'s/b.jpg');">
+        <div class="card__background" style="background-image: url('../Code/Foto\'s/123456.jpg'); background-size: contain;">
           <div class="card-info">
-            <i class="fa-brands fa-php" style="padding-right: 45px; font-size: 25px;"></i>
+            <i class="fa-brands fa-react" style="padding-right: 45px; font-size: 25px;"></i>
             <i class="fa-brands fa-js" style="font-size: 25px; padding-right: 45px;"></i>
-            <i class="fa-brands fa-laravel" style="font-size: 25px;"></i>
+            <i class="fa-brands fa-css3" style="font-size: 25px;"></i>
           </div>
         </div>
         <div class="card__content">
         </div>
         </li>
         <a class="card" onclick="on4()">
-          <div class="card__background" style="background-image: url('../Foto\'s/b.jpg');">
+          <div class="card__background" style="background-image: url('../Foto\'s/b.jpg'); background-size: contain;">
             <div class="card-info">
               <i class="fa-brands fa-html5" style="padding-right: 45px; font-size: 25px;"></i>
               <i class="fa-brands fa-css3" style="padding-right: 45px; font-size: 25px;"></i>
@@ -224,7 +224,7 @@
   <section id="overlay-2">
     <div class="about-card">
       <div class="inhoud">
-        <h1 id="font-size" class="owText text-center" style=" padding-top: 40px; color: white;">Longnex</h1>
+        <h1 id="font-size" class="owText text-center" style=" padding-top: 40px; color: white;">Led sensor</h1>
         <p style="padding-top: 40px; color: white;"></p>
 
 
@@ -239,7 +239,7 @@
   <section id="overlay-3">
     <div class="about-card">
       <div class="inhoud">
-        <h1 id="font-size" class="owText text-center" style=" padding-top: 40px; color: white;">Welcome to Mars</h1>
+        <h1 id="font-size" class="owText text-center" style=" padding-top: 40px; color: white;">Pokemon App</h1>
         <p style="padding-top: 40px; color: white;"></p>
 
 
@@ -254,7 +254,7 @@
   <section id="overlay-4">
     <div class="about-card">
       <div class="inhoud">
-        <h1 id="font-size" class="owText text-center" style=" padding-top: 40px; color: white;">Transformers Community
+        <h1 id="font-size" class="owText text-center" style=" padding-top: 40px; color: white;">Welcome to Mars
         </h1>
         <p style="padding-top: 40px; color: white;"></p>
 
@@ -327,11 +327,6 @@
       </div>
     </div>
   </section>
-
-  <section class="footer container">
-    <p>&#169; Jamie Vos</p>
-  </section>
-
 
   <!-- Javascript + Animate library-->
 
