--- a/Code/skills.html
+++ b/Code/skills.html
@@ -48,7 +48,7 @@
         <div class="outer">
             <div class="card">
                 <div class="info">
-                    <h3 class="title">Title 1</h3>
+                    <h3 class="title">2018</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                         laboris nisi ut aliquip ex ea commodo consequat. </p>
@@ -56,7 +56,7 @@
             </div>
             <div class="card">
                 <div class="info">
-                    <h3 class="title">Title 2</h3>
+                    <h3 class="title">2019-2020</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                         laboris nisi ut aliquip ex ea commodo consequat. </p>
@@ -64,7 +64,7 @@
             </div>
             <div class="card">
                 <div class="info">
-                    <h3 class="title">Title 3</h3>
+                    <h3 class="title">2020-2021</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                         laboris nisi ut aliquip ex ea commodo consequat. </p>
@@ -72,7 +72,7 @@
             </div>
             <div class="card">
                 <div class="info">
-                    <h3 class="title">Title 4</h3>
+                    <h3 class="title">2021-2022</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                         laboris nisi ut aliquip ex ea commodo consequat. </p>
@@ -80,7 +80,7 @@
             </div>
             <div class="card">
                 <div class="info">
-                    <h3 class="title">Title 5</h3>
+                    <h3 class="title">2023</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                         laboris nisi ut aliquip ex ea commodo consequat. </p>
